small fix and remuve scrollbar in fullscreen mode

--- a/src/components/sections/DduPlayer/DduCanvas/DduCanvas.sass
+++ b/src/components/sections/DduPlayer/DduCanvas/DduCanvas.sass
@@ -5,6 +5,11 @@
     border: solid #000000 1px
     overflow: auto
     background: #353535
+    
+    &_isFullscreen
+        &::-webkit-scrollbar
+            display: none
+        
     // &::-webkit-scrollbar
     //     display: none
     
